[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/radial_bar.png" type="Texture" id=1]
[ext_resource path="res://Upgrades/OrbSpawners/StickyGooOrbSpawner/StickyGoo.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 88.0

[sub_resource type="Animation" id=2]
resource_name = "Collapse"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="StickyGoo" type="Area2D"]
scale = Vector2( 2, 2 )
collision_layer = 0
collision_mask = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0.780392, 0.972549, 0.341176 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Collapse = SubResource( 2 )
anims/SetUp = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_StickyGoo_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_StickyGoo_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
